--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
+    ".next/types/**/*.ts", 
+    "src/pages/ssr.js"
   ],
   "exclude": ["node_modules"]
 }
