--- a/.env
+++ b/.env
@@ -3,13 +3,13 @@
 # ------------------------
 
 NEXTAUTH_SECRET=
-NEXTAUTH_URL=
+NEXTAUTH_URL=http://localhost:3000
 
 # ------------------------
 # OAuth Providers
 # ------------------------
 
-GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_ID=202225489213-86pn0muv5mbhhb434apkgmarlqvm46ps.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=
 
 # ------------------------
