Changes for Deployment

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 # ------------------------
 
 NEXTAUTH_SECRET=anythingmysecrettosignjwt
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=http://localhost:3000, https://text-similarity-api-36981c6e3b19.herokuapp.com/, https://main.d1xk0w2bvmp3k5.amplifyapp.com/
 
 # ------------------------
 # OAuth Providers
