--- a/.env
+++ b/.env
@@ -3,20 +3,20 @@
 # ------------------------
 
 NEXTAUTH_SECRET=anythingmysecrettosignjwt
-NEXTAUTH_URL=http://localhost:3000, https://text-similarity-api-36981c6e3b19.herokuapp.com/, https://main.d1xk0w2bvmp3k5.amplifyapp.com/
+NEXTAUTH_URL=http://localhost:3000
 
 # ------------------------
 # OAuth Providers
 # ------------------------
 
 GOOGLE_CLIENT_ID=202225489213-86pn0muv5mbhhb434apkgmarlqvm46ps.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_SECRET=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
 
 # ------------------------
 # Database
 # ------------------------
 
-DATABASE_URL='mysql://lyvt1407munu4dj8vvtm:pscale_pw_1G4dLsIvMsSh6jXrkpbQOcqecBptZZ3iN5ur2Y17rYe@aws.connect.psdb.cloud/similarity-api-db?sslaccept=strict'
+DATABASE_URL='mysql://mh95e3acuhbn4ikuwyxf:pscale_pw_vvqQ3WpmMuCkNXYnLozzme5yn89oPwaMGSDfQ0hGgAo@aws.connect.psdb.cloud/similarity-api-db?sslaccept=strict'
 
 # ------------------------
 # OpenAI
