--- a/.env
+++ b/.env
@@ -2,15 +2,15 @@
 # NextAuth.js Configuration
 # ------------------------
 
-NEXTAUTH_SECRET=anythingmysecrettosignjwt
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=
+NEXTAUTH_URL=
 
 # ------------------------
 # OAuth Providers
 # ------------------------
 
 GOOGLE_CLIENT_ID=202225489213-86pn0muv5mbhhb434apkgmarlqvm46ps.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_SECRET=
 
 # ------------------------
 # Database
